fix: use simple logo for both light and dark mode

--- a/src/templates/styles/styles.scss
+++ b/src/templates/styles/styles.scss
@@ -254,11 +254,8 @@ table {
     }
   }
 
-  .logo-dark {
-    display: block !important;
-  }
-
-  .logo-light {
-    display: none !important;
+  .logo {
+    width: 48px;
+    margin-bottom: 1.5em;
   }
 }
